--- a/Index.html
+++ b/Index.html
@@ -13,20 +13,94 @@
 </head>
 
 <body>
-    <section>
+    <section class="background-image">
 
-        <div class="background-image">
-            <h1 class="middle">Let's Help Those Who Are</h1>
-            <h1 class="middle">In Desperate Need</h1>
-            <h4 class="middle">Your $1 can save a person from hunger.</h4>
+        <div class="middle">
+            <h1>Let's Help Those Who Are</h1>
+            <h1>In Desperate Need</h1>
+            <h3>Your $1 can save a person from hunger.</h3>
 
-
+            <a class="button" target="_blank" href="http://https://bidyanondo.org/projects/1">Donate Now</a>
 
 
         </div>
+
+    </section>
+    <section class="middle">
+        <div>
+            <h2>Donate Today</h2>
+            <h4>Your every penny matters as it spreads all around the world to the poor below poverty
+                people.
+            </h4>
+            <h4 class="middle">Contribute a mininum of single dollar so that the poor can have their 1 time meal.</h4>
+        </div>
+        <div class="container-1">
+            <h2 class="box-1">1 Dollar</h2>
+
+            <h2 class="box-1">10 Dollars</h2>
+
+            <h2 class="box-1">50 Dollars</h2>
+
+            <h2 class="box-1">100 Dollars</h2>
+        </div>
+        <p id="USD">Other amount (USD)</p>
+
+
+        <a class="button" target="_blank" href="http://https://bidyanondo.org/projects/1">Donate Now</a>
+
     </section>
 
+    <section>
+        <div>
+            <h2 class="middle">Our Donation Plan
+            </h2>
+            <p class="middle">Our aim is to raise 10 million USD and donate the money among the poors and build them
+                shelter.
+            </p>
+            <p class="middle"> We also want to build school in the under-developed areas, so that the children who are
+                under
+                poverty can go have education free of cost. We will also be developing hospitals and other medical
+                facility to them.
+            </p>
+            <div class="container-2">
 
+                <div id="Food">
+                    <img src="icons/food.png" alt="">
+                    <h2 class="headline"> Food For A Family </h2>
+                    <p class="para">Your money will bring smile to thousands of family.
+                        It will bring tranquality to the under-developed rural areas where
+                        people can't afford one loaf of bread.
+                    </p>
+                </div>
+                <div id="Shelter">
+                    <img src="icons/shelter.png" alt="">
+                    <h2 class="headline"> Shelter For A Family</h2>
+                    <p class="para"> This is where you need to donate generously.
+                        Your money will be donated to build shelter for the homeless and to fix the damaged house.</p>
+                </div>
+                <div id="Education">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h2 class="headline">Education For A Child.</h2>
+                    <p class="para">Education is the most valueable asset for a human being, but sad reality is not
+                        everyone
+                        gets it.
+                        So our team will aim to distribute your money to the rural areas to build school to for them.
+                    </p>
+                </div>
+            </div>
+    </section>
+
+    <section class="flex">
+        <div class="half-width">
+            <h2 class="head2">Their life depend on your donation</h2>
+            <p class="para3">12.3% of the wold population live under poverty line. And it sums up to 80 million
+                population.
+                And every penny us matters to build a better life for those underline people. We should stand by those
+                people
+                to help them for a better life. </p>
+        </div>
+        <div class="half-width"><img src="images/donation6.jpg" alt=""></div>
+    </section>
 </body>
 
 </html>
