--- a/Index.html
+++ b/Index.html
@@ -98,9 +98,28 @@
                 And every penny us matters to build a better life for those underline people. We should stand by those
                 people
                 to help them for a better life. </p>
+            <a class="button2" href="http://https://bidyanondo.org/projects/1"> How To Contribute?</a>
         </div>
         <div class="half-width"><img src="images/donation6.jpg" alt=""></div>
+
+    </section>
+    <section class="flex">
+        <div class="half-width">
+            <h2 class="head3">
+                They Need Us To Survive
+            </h2>
+            <p class="para4"> We spend thousands of Dollar on our luxury items.
+                And when it comes to charity we Contribute to nothing.
+                But now, we need to step up to support them for their betterment.
+            </p>
+            <a class="button2" href="https://bidyanondo.org/projects/1"> How To Contribute?</a>
+
+        </div>
+        <div><img class="image" src="images/donation0.jpg" alt=""></div>
+
+
     </section>
 </body>
+
 
 </html>
