--- a/Index.html
+++ b/Index.html
@@ -98,7 +98,7 @@
                 And every penny us matters to build a better life for those underline people. We should stand by those
                 people
                 to help them for a better life. </p>
-            <a class="button2" href="http://https://bidyanondo.org/projects/1"> How To Contribute?</a>
+            <a class="button2" href="http://https://bidyanondo.org/projects/1"> How Tgito Contribute?</a>
         </div>
         <div class="half-width"><img src="images/donation6.jpg" alt=""></div>
 
@@ -119,7 +119,22 @@
 
 
     </section>
+    <section class="middle">
+        <div>
+            <h2> Get Our Updates</h2>
+            <h6>Please enter your email to get your regular updates from the work we are doing.</h6>
+        </div>
+        <h5><span>email</span></h5>
+
+    </section>
 </body>
+<footer>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <h4>Be Humble</h4>
+
+</footer>
 
 
 </html>
